@@ -1,35 +1,1 @@
 FR0000130007.EURONEXT.PAR;live;yahoo
-QS0011040902.EURONEXT.PAR;live;abcbourse
-FR0003500008.EURONEXT.PAR;live;abcbourse
-QS0010989141.EURONEXT.PAR;live;abcbourse
-QS0011017637.EURONEXT.PAR;live;abcbourse
-QS0011017686.EURONEXT.PAR;live;abcbourse
-QS0011017736.EURONEXT.PAR;live;abcbourse
-QS0011017801.EURONEXT.PAR;live;abcbourse
-QS0011017702.EURONEXT.PAR;live;abcbourse
-QS0011017652.EURONEXT.PAR;live;abcbourse
-QS0010989091.EURONEXT.PAR;live;abcbourse
-QS0010989133.EURONEXT.PAR;live;abcbourse
-QS0010989117.EURONEXT.PAR;live;abcbourse
-QS0010989109.EURONEXT.PAR;live;abcbourse
-QS0011017603.EURONEXT.PAR;live;abcbourse
-QS0010989125.EURONEXT.PAR;live;abcbourse
-QS0011017827.EURONEXT.PAR;live;abcbourse
-QS0011017769.EURONEXT.PAR;live;abcbourse
-QS0011017785.EURONEXT.PAR;live;abcbourse
-FR0003502079.EURONEXT.PAR;live;abcbourse
-FR0010491688.EURONEXT.PAR;live;euronext
-FR0010491688.EURONEXT.PAR;import;euronext
-QS0010980447.EURONEXT.PAR;live;abcbourse
-FR0003999481.EURONEXT.PAR;live;abcbourse
-FR0003999499.EURONEXT.PAR;live;abcbourse
-FR0003999473.EURONEXT.PAR;live;abcbourse
-FR0003999572.EURONEXT.PAR;live;abcbourse
-FR0003501980.EURONEXT.PAR;live;abcbourse
-FR0003502087.EURONEXT.PAR;live;abcbourse
-FR0000073272.EURONEXT.PAR;live;euronext
-FR0000073272.EURONEXT.PAR;import;euronext
-FR0000074775.ALTERNEXT.PAR;live;alternext
-FR0000074775.ALTERNEXT.PAR;import;euronext
-FR0004056851.EURONEXT.PAR;live;euronext
-FR0004056851.EURONEXT.PAR;import;euronext
